tests/sksl/errors/ArrayTypeTooManyDimensionsInStruct.glsl
### Compilation failed:

error: 1: multi-dimensional arrays are not supported
struct S { float[2][2] x; };
           ^^^^^^^^^^^
1 error
